    Seconded: Giacomo A. Catenazzi
    Closes: #518199
  * [8fd91a0]
    README Process upgrading-checklist: Created/converted to org-mode
    Wording: Manoj Srivastava
    Seconded: Russ Allbery 
    Closes: #545548
  * [4da0692]: [typo-fixes]: 
    policy: Fix a number of grammatical or typographical errors
    wording: Eric Dantan Rzewnicki
    Seconded: Manoj Srivastava

  [ Russ Allbery ]
  * Policy: Clarify policy on named pipes in packages
    Wording: Russ Allbery <rra@debian.org>
    Seconded: Manoj Srivastava <srivasta@debian.org>
    Seconded: Andrew McMillan <andrew@morphoss.com>
  * Change the sole occurrence of MUST to must for consistency and to
    avoid confusion with IETF RFC keywords.  Thanks, Jakub Wilk.
    (Closes: #552757)

 -- Manoj Srivastava <srivasta@debian.org>  Wed, 21 Oct 2009 15:46:35 -0500

debian-policy (3.8.3.0) unstable; urgency=low

  * Policy: Bring Architecture description in line with dpkg-source
    Wording: Russ Allbery <rra@debian.org>
    Seconded: Raphael Hertzog <hertzog@debian.org>
    Seconded: Manoj Srivastava <srivasta@debian.org>
    Closes: #530967
  * Policy: Update information about DEB_*_ARCH variables
    Wording: Guillem Jover <guillem@debian.org>
    Seconded: Russ Allbery <rra@debian.org>
    Seconded: Andrew McMillan <andrew@morphoss.com>
    Closes: #527871
  * Policy: Remove support for uploads to multiple distributions
    Wording: Russ Allbery <rra@debian.org>
    Seconded: Raphael Hertzog <hertzog@debian.org>
    Seconded: Manoj Srivastava <srivasta@debian.org>
    Closes: #514919
  * Policy: Remove permission for packages to modify ld.so.conf
    Wording: Steve Langasek <vorlon@debian.org>
    Seconded: Russ Allbery <rra@debian.org>
    Seconded: Kurt Roeckx <kurt@roeckx.be>
    Seconded: Adeodato Simó <dato@net.com.org.es>
    Seconded: Julien Cristau <jcristau@debian.org>
    Closes: #519941
  * Policy: Clarify X installation directory handling
    Wording: Russ Allbery <rra@debian.org>