@@ -13,7 +13,7 @@ lang="en" xml:lang="en">
 <title>Policy checklist for upgrading your packages</title>
 <meta http-equiv="Content-Type" content="text/html;charset=iso-8859-1"/>
 <meta name="generator" content="Org-mode"/>
-<meta name="generated" content="2009-11-12 17:10:20 PST"/>
+<meta name="generated" content="2009-11-20 16:47:18 CST"/>
 <meta name="author" content="Bill Allombert, Josip Rodin, Julian Gilbey, Russ Allbery, and Manoj Srivastava"/>
 <meta name="description" content=""/>
 <meta name="keywords" content=""/>
@@ -173,8 +173,17 @@ Unreleased.
 </p>
 <ul>
 <li>
+<b>9.1.1</b> : An FHS exception has been granted for multiarch libraries.
+Permitting files to instead be installed to <code>/lib/triplet</code> and
+<code>/usr/lib/triplet</code> directories.
+</li>
+<li>
 <b>10.6</b> : Explicitly state that packages may not contain named pipes and
 should instead create them in postinst and remove them in prerm or postrm.
+</li>
+<li>
+<b>9.1.1</b> : /sys and /selinux directories are explicitly allowed as an
+exception to the FHS.
 
 </li>
 </ul>
@@ -1790,8 +1799,8 @@ Upstream changelog must be installed too
 <p class="author"> Author: Bill Allombert, Josip Rodin, Julian Gilbey, Russ Allbery, and Manoj Srivastava
 <a href="mailto:srivasta@debian.org">&lt;srivasta@debian.org&gt;</a>
 </p>
-<p class="date"> Date: 2009-11-12 17:10:20 PST</p>
-<p class="creator">HTML generated by org-mode 6.32b in emacs 23</p>
+<p class="date"> Date: 2009-11-20 16:47:18 CST</p>
+<p class="creator">HTML generated by org-mode 6.33c in emacs 23</p>
 </div>
 </div>
 </body>
